<resources>
    <string name="app_name">Clock</string>
    <string name="alarm_tab_title">alarm</string>
    <string name="stopwatch_tab_title">stopwatch</string>
    <string name="timer_tab_title">timer</string>
    <string name="clock_tab_title">clock</string>
    <string name="clock_format_time_12_hour">h:mm:ss</string>
    <string name="clock_format_time_24_hour">HH:mm:ss</string>
    <string name="clock_format_date_12_hour">EEE, d MMM</string>
    <string name="clock_format_date_24_hour">EEE, d MMM</string>
    <string name="search">search</string>
    <string name="key">AJ08L2AYX4YH</string>
    <string name="map_box_key">pk.eyJ1IjoieWFyb3NsYXY0NDQ0IiwiYSI6ImNrMGlhem4wMDBhZWYzb3A1bnpqeHA4ZHIifQ.Fop-TkLfIdeCN-jwyTNYZA</string>
</resources>
